apicontrollerTest 빼고 나머지 테스트 완료, asciidoc이랑 연동 중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ logging.level.org.hibernate.SQL=debug
 # 압축된 쿼리를 읽기 좋게 포멧
 spring.jpa.properties.hibernate.format_sql=true
 # 서버 시작에 테이블 생성
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 
 # delete,put mapping
 spring.mvc.hiddenmethod.filter.enabled=true
