--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 
 spring.jpa.show-sql=true
-spring.datasource.url = jdbc:h2:tcp://localhost/~/coding-test
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:file:d:/JPA/coding-test/database/h2-sample
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.datasource.username=sa
 spring.datasource.driver-class-name=org.h2.Driver
@@ -9,8 +10,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 logging.level.org.hibernate.SQL=debug
 # 압축된 쿼리를 읽기 좋게 포멧
 spring.jpa.properties.hibernate.format_sql=true
-# 서버 시작에 테이블 생성
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 
 # delete,put mapping
 spring.mvc.hiddenmethod.filter.enabled=true
