--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	testAnnotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.projectlombok:lombok'
 
+	testImplementation 'com.googlecode.json-simple:json-simple:1.1'
 	testImplementation 'org.apache.httpcomponents:httpclient:4.5.13'
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
